Add missing colon
Add missing colon to workflow file

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Setting up nodejs
       uses: actions/setup-node@v1
       with:
-        node-version '14'
+        node-version: '14'
 
     - name: Setting up ruby
       uses: actions/setup-ruby@v1
