--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm install
 
     - name: Build
-      run: bundle exec jekyll build --trace
+      run:  JEKYLL_ENV=production bundle exec jekyll build --trace
 
     - name: "Deploy"
       uses: peaceiris/actions-gh-pages@v3
